# packly

./: .gitignore  README.md  build.gradle.kts  gradle.properties  pyproject.toml  settings.gradle.kts
.github/workflows/: android-ci.yml  build.yml  release-aab.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
docs/: architecture-plan.md  google-drive-cloud-sync.md
docs/architecture/: data-model.md  implementation-plan.md  navigation-and-state.md  persistence.md  tech-stack.md
docs/ci/: github-actions-plan.md
docs/kanban-reporting/: README.md  architecture.md  pdf-design.md
docs/kanban-reporting/schema/: board-report.schema.json
docs/qa/: qa-followup-remediation.md  qa-report.md
docs/release/: play-store-aab.md
docs/ux/: design-system.md  design.md  packly-ux-concept.md  redesign-implementation-handoff.md
docs/ux/stitch_packly_mobile_app_design/packly_create_trip_deadline/: code.html
docs/ux/stitch_packly_mobile_app_design/packly_create_trip_items/: code.html
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kanban_reporting/: __init__.py  cli.py  generator.py  models.py  pdf.py
kanban_reporting/adapters/: __init__.py  artifacts.py  ci.py  git.py  hermes_kanban.py
scripts/: check_cloud_sync_config.py
scripts/kanban_report/: generate.py
tests/fixtures/kanban_reporting/: sample_board.json
tests/kanban_reporting/: test_cli_fixture.py  test_cli_live_board.py  test_generator.py  test_hermes_kanban_adapter.py  test_models.py
tools/: check_string_parity.py  instance_plus_jakarta_sans.py
(+124 files in other folders)
