[project]
name = "kanban-reporting-workspace"
version = "0.1.0"
description = "Project-agnostic Hermes Kanban JSON-to-PDF reporting utilities."
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "reportlab>=4.2,<5",
]

[dependency-groups]
dev = [
  "pytest>=8.0,<9",
  "pypdf>=5.0,<7",
]

[tool.pytest.ini_options]
testpaths = ["tests/kanban_reporting"]
pythonpath = ["."]
